# ir-remote-saturn-yellow

./: .gitignore  README.md
blockchain/: README.md  SmartIrContract.sol  add_action.py  addr_book.py  create_account.py  fund_account.py  get_all_actions.py
blockchain/scripts/: add_action.py  addr_book.py  fund_account.py  get_all_actions.py
blockchain/test_contracts/: MyFifthContract.sol  MyFirstContract.sol  MyFourthSmartContract.sol  MySecondContract.sol  MySeventhContract.sol  MySixthContract.sol  MyThirdSmartContract.sol
controllers/: README.md  listen_for_events.py  network_configuration_esp32.py  publish_mqtt.py  receiving_mqtt_code.py  remoteIR.py  remoteIRWithRotation.py  ui_flow_code.py
controllers/IRDecoder_arduino/: IRDecoder_arduino.ino
controllers/ir_transmitter_arduino/: ir_transmitter_arduino.ino
pc_software/: README.md  ab_util.py  blockchain_gateway.py  jsonExample.py  mqtt_handler.py  pc_pb2.py  smart_ir.py  smart_ir.spec  smart_ir_data.py  smart_ir_onefile.spec
pc_software/config_templates/: controller_configuration copy.json  controller_configuration.json  controller_configuration_apple.json  controller_configuration_assessed.json
pc_software/ui/: mainScreenUI.ui
receiver/: west.yml
receiver/ahu/: CMakeLists.txt  README.md  prj.conf  sample.yaml
receiver/ahu/src/: ab_util.h  ahu.c  hci.c  ir_module.c  pc_module.h  uart_module.c  uart_module.h
scripts/: README.md
transmitter/: README.md  ir_transmitter_arduino.ino
transmitter/ahu/: CMakeLists.txt  README.md
transmitter/ir_transmitter_arduino/: ir_transmitter_arduino.ino
(+23 files in other folders)
